--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       method="post"
       onsubmit="onSubmit()"
     >
-      <fieldset>
+      <fieldset class="fieldset">
         <legend>Personal information</legend>
 
         <label for="surname" class="form-field">
@@ -76,7 +76,7 @@
         </label>
       </fieldset>
 
-      <fieldset>
+      <fieldset class="fieldset">
         <legend>Registration</legend>
 
         <label for="email" class="form-field">
@@ -103,7 +103,7 @@
         </label>
       </fieldset>
 
-      <fieldset>
+      <fieldset class="fieldset">
         <legend>An interesting fact about you!</legend>
 
         <div class="form-field">
@@ -178,7 +178,7 @@
         </label>
       </fieldset>
 
-      <fieldset>
+      <fieldset class="fieldset">
         <legend>Additional info</legend>
 
         <label for="comment" class="form-field">
